--- a/PrabhjeetBookStore/Views/Shared/_LoginPartial.cshtml
+++ b/PrabhjeetBookStore/Views/Shared/_LoginPartial.cshtml
@@ -6,7 +6,7 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
-        <a  class="nav-link" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
+        <a class="nav-link" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a> <!--removed text dark-->
     </li>
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
@@ -16,11 +16,11 @@
 }
 else
 {
+<li class="nav-item">
+    <a class="nav-link" asp-area="Identity" asp-page="/Account/Register">Register</a> <!--removed text dark-->
+</li>
     <li class="nav-item">
-        <a class="nav-link" asp-area="Identity" asp-page="/Account/Register">Register</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" asp-area="Identity" asp-page="/Account/Login">Login</a>
+        <a class="nav-link" asp-area="Identity" asp-page="/Account/Login">Login</a> <!--removed text dark-->
     </li>
 }
 </ul>
