--- a/PrabhjeetBookStore/Areas/Admin/Views/Category/Index.cshtml
+++ b/PrabhjeetBookStore/Areas/Admin/Views/Category/Index.cshtml
@@ -9,7 +9,7 @@
 <br />
 <div class="row">
     <div class="col-6">
-        <h2 class="text-primary">Category List</h2>
+        <h2 class="text-primary">Category List </h2>
     </div>
     <div class="col-6 text-right">
         <a class="btn btn-primary" asp-action="Upsert"><i class="fas fa-plus"></i> &nbsp; Create New Category</a>
@@ -18,7 +18,7 @@
 
 <br />
 <div class="p-4 border rounded">
-    <table id="tbldata" class="table table-striped table-bordered" style="width:100%">
+    <table id="tblData" class="table table-striped table-bordered" style="width:100%">
         <thead class="thead-dark">
             <tr class="table-info">
                 <th>Name</th>
@@ -27,16 +27,16 @@
         </thead>
     </table>
 </div>
-@*<div class="text-center">
-    <a href="/Admin/Category/Upsert/id" class="btn btn-success text-white" style="cursor:pointer">
-        <i class="fas fa-edit"></i>&nbsp;
-    </a>
-    <a class="btn btn-danger text-white" style="cursor: pointer">
-        <i class="fas fa-trash-alt"></i>&nbsp;
+<div class="text-center">
+        <a href="/Admin/Category/Upsert/id" class="btn btn-success text-white" style="cursor:pointer">
+            <i class="fas fa-edit"></i>&nbsp;
         </a>
-</div>*@
+        <a class="btn btn-danger text-white" style="cursor: pointer">
+            <i class="fas fa-trash-alt"></i>&nbsp;
+            </a>
+    </div>*
 
-@section Scripts{ 
+@section Scripts{
 
-<script src="~/js/category.js"></script>
+    <script src="~/js/category.js"></script>
 }
