--- a/PrabhjeetBookStore/Areas/Admin/Views/Category/Index.cshtml
+++ b/PrabhjeetBookStore/Areas/Admin/Views/Category/Index.cshtml
@@ -34,7 +34,7 @@
         <a class="btn btn-danger text-white" style="cursor: pointer">
             <i class="fas fa-trash-alt"></i>&nbsp;
             </a>
-    </div>*
+    </div>
 
 @section Scripts{
 
