--- a/PrabhjeetBookStore/Views/Shared/_Layout.cshtml
+++ b/PrabhjeetBookStore/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                                 Content Management
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="nav-link" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a> <!--Category link added-->
+                                <a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a> <!--Category link added-->
                                 <!--<a class="dropdown-item" href="#">Action</a>-->
                                 <a class="dropdown-item" href="#">Another action</a>
                                 <div class="dropdown-divider"></div>
