--- a/PrabhjeetBookStore/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/PrabhjeetBookStore/Areas/Admin/Views/Product/Upsert.cshtml
@@ -14,6 +14,7 @@
             title = "Edit Product";
             <input type="hidden" asp-for="Product.Id" />
         }
+        </div>
         <div class="col-12 border-bottom">
             <h2 class="text-primary">@title</h2>
         </div>
@@ -72,7 +73,7 @@
                         <span asp-validation-for="Product.Price" class="text-danger"></span>
                     </div>
                 </div>
-               @* <div class="form-group row">
+                <div class="form-group row">
                     <div class="col-4">
                         <label asp-for="Product.Price50"></label>
                     </div>
@@ -88,8 +89,8 @@
                     <div class="col-8">
                         <input asp-for="Product.Price100" class="form-control" />
                         <span asp-validation-for="Product.Price100" class="text-danger"></span>
-                    </div>*@
-       
+                    </div>
+                </div>
         <div class="form-group row">
             <div class="col-4">
                 Category
